2011-04-07  vadim  <vadim@netcitadel.com>

	* PIXImporterNat.cpp (buildDNATRule): resolved several problems
	with import of "static" commands that use access list that matches
	source or destination tcp/udp ports. See #2326, #2327

	* pix.g (network_top_level_command): see #2295 fixes in the grammar
	to support import of FWSM configs

	* PIXImporter.cpp (fixServiceObjectUsedForBothSrcAndDstPorts):
	see #2265 "ASA 8.3 acl import: access-list commands using two
	named objects or object-groups", see #2290 "Access lists that
	include mix of service objects and inline service definitions are
	not properly imported". To import access-list command that matches
	both source and destination tcp/udp ports and uses object-group in
	either match I should create a new service group with a collection
	of TCP or UDP service objects matching all combinations of source
	and destination port ranges defined by the rule. This should work
	when one or both matches use object-group in combination with
	inline port match.

	* PIXImporter.cpp (pushPolicyRule): see #2297 Added warning when
	importer enounters access-list command that matches tcp or udp
	ports with "neq" port operators in both source and
	destination. This configuration is not supported by import at this
	time.

	* PIXImporterNat.cpp (buildSNATRule): see #2319 "Imported nat
	rules with multi-line access-lists have only the first entry"

	* PIXImporterRun.cpp (run): see #2167 Implemented import of
	"names" and "name" commands in PIX/ASA configs.

	* CompilerDriver_pix_run.cpp (pixNetworkZoneChecks): see SF bug
	3213019 "FWSM Network zone and IPv6". Currently we do not support
	ipv6 with PIX/ASA and FWSM. If user creates a group to be used as
	network zone object and places ipv6 address in it, this address
	should be ignored while compiling the policy but this should not
	be an error.

	* FirewallInstaller.cpp (executeExternalInstallScript): see SF bug
	3212988 "external script makes getopt difficult". User-defined